--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "afrux/asirem",
+  "name": "1Dot/asirem",
   "description": "The weird Flarum theme made with potatoes as fuel, by Afrux.",
   "keywords": [
     "flarum"
