--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "ramesh-dada/asirem",
-  "description": "The weird Flarum theme made with potatoes as fuel, by Afrux.",
+  "name": "ramesh-dada/customtheme",
+  "description": "Its Copy of Afrux Asirem theme",
   "keywords": [
     "flarum"
   ],
