--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "ramesh-dada/customtheme",
-  "description": "1Dot Custom Theme Powered by Ramesh Dada Premium",
+  "description": "1Dot Custom Theme",
   "keywords": [
     "flarum"
   ],
