--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
   "type": "flarum-extension",
   "license": "MIT",
   "require": {
-    "flarum/core": "^1.0.0",
-    "afrux/flarum-theme-base": "^0.1.0"
+    "flarum/core": "^1.0",
+    "ramesh-dada/flarum-theme-base": "^1.0"
   },
   "require-dev": {
     "sycho/flarum-uikit": "0.1.x-dev",
