--- a/js/package.json
+++ b/js/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "flarum-webpack-config": "^0.1.0-beta.10",
-    "webpack": "^5.45.1",
+    "flarum-webpack-config": "^1.0",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.0.7"
   },
   "devDependencies": {
