--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,19 @@
-name: JavaScript
+name: Build
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@master
-      - uses: flarum/action-build@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - name: Build production JS
+        uses: flarum/action-build@2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          build_script: build
+          package_manager: yarn
